--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "projeto",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "npm run build && electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^15.0.0"
+    "electron": "^15.0.0",
+    "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/electron": "^1.6.10"
   }
 }
